--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -8,7 +8,8 @@
    },
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "id": "4527aa95-6b29-402c-a521-428958869bb2"
    },
    "source": [
     "# IBM Streams sample application\n",
@@ -70,7 +71,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "25f87574-458e-4b4d-95e9-5a1a5972a6a5"
+   },
    "source": [
     "<a name=\"cpd\"></a>\n",
     "### Option 1: Connect to a Streams instance from an IBM Cloud Pak for Data  project\n",
@@ -88,17 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setup complete, continue to section 1.2\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "id": "57fb5ffb-d34e-4c75-90f9-0e146f26c18a"
+   },
+   "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
     "from streamsx.topology import context\n",
@@ -123,7 +120,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "5734aca1-2dd4-46e8-ada8-498e4f9a7c39"
+   },
    "source": [
     "<a name=\"notcpd\"></a>\n",
     "### Option 2: Connect to a Streams instance from IBM Watson Studio and other environments\n",
@@ -143,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "0a4f1688-11f2-4b33-a517-7610b6366ceb"
+   },
    "outputs": [],
    "source": [
     "## Paste snippet from development guide\n"
@@ -151,24 +152,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "2b666b00-eb67-4a3f-9bff-e70d5555557e"
+   },
    "source": [
     "### 1.2 Import  the `streamsx` package and verify the package version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO: streamsx package version: 1.14.13\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "id": "e0d79804-eb55-442e-81e1-6920b9367b67"
+   },
+   "outputs": [],
    "source": [
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
@@ -179,7 +176,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "8357efeb-6a08-4979-a233-c2729e797eb5"
+   },
    "source": [
     "<a id=\"create\"></a>\n",
     "# 2. Create the application\n",
@@ -190,8 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "id": "60290fbd-1a1d-46aa-961b-dc20cf811f88"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology.topology import Topology\n",
@@ -201,7 +202,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "6edd80db-e7fb-4938-a32b-ce28fd074d96"
+   },
    "source": [
     "## 2.1 Define sources\n",
     "Your application needs some data to analyze, so the first step is to define a data source that produces the data to be analyzed. \n",
@@ -213,7 +216,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "a963865a-b6c8-47c4-936f-43ef282c83de"
+   },
    "source": [
     "### 2.1.1 Define a source class\n",
     "\n",
@@ -224,8 +229,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "id": "1c301378-6a4a-40fc-9199-428cfc924d95"
+   },
    "outputs": [],
    "source": [
     "import random \n",
@@ -252,7 +259,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "27718829-78c1-4275-ba5a-197b336308e0"
+   },
    "source": [
     "### 2.1.2  Create the `Stream `\n",
     "\n",
@@ -261,8 +270,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "id": "27c06395-6f7a-4918-9ab8-d310d431b826"
+   },
    "outputs": [],
    "source": [
     "#Create a stream from the data using Topology.source\n",
@@ -271,7 +282,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "47f56984-d408-4169-973a-88c7382ea1c1"
+   },
    "source": [
     "# 2.2 Analyze data\n",
     "\n",
@@ -289,7 +302,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "005f00b9-ba16-4d5f-82e4-5a6338c8e2c8"
+   },
    "source": [
     "### 2.2.1 Filter data from the  `Stream`  \n",
     "\n",
@@ -298,8 +313,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "id": "da0d0cfb-a7f8-4b88-a065-a2df8b5ec265"
+   },
    "outputs": [],
    "source": [
     "# Accept only values greater than 100\n",
@@ -313,7 +330,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "2a3a3526-06c8-4073-b695-03f242aea62a"
+   },
    "source": [
     "### 2.2.2  Compute averages on the  `Stream`  \n",
     "\n",
@@ -326,8 +345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "id": "fe2c8528-f9c3-4ed0-91bd-9d957fa630fc"
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -363,7 +384,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "6d12a4a8-01cc-43bb-ae5e-6e7c3aa11188"
+   },
    "source": [
     "\n",
     "### 2.2.3 Enrich the data on the `Stream`\n",
@@ -382,8 +405,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "id": "14c737a7-3b74-4774-bee3-e558fad6a54a"
+   },
    "outputs": [],
    "source": [
     "# Modify this tuple with the coordinates of the sensor\n",
@@ -403,7 +428,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "d82251d4-ec07-44c4-a681-e41f80c99ce8"
+   },
    "source": [
     "# 2.3 Create a `View` to preview the tuples on the `Stream` \n",
     "\n",
@@ -418,8 +445,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "id": "b91ee266-8b17-4577-9d62-4d4440aacff0"
+   },
    "outputs": [],
    "source": [
     "averages_view = enriched_average.view(name=\"RollingAverage\", \n",
@@ -428,7 +457,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "7d3dad37-97f1-45c6-9058-3f2c58ec095c"
+   },
    "source": [
     "You can <a href=\"http://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-6/#accessing-the-tuples-of-a-view\">connect to a view in <em>any</em> running Streams job using the REST API</a> , regardless of what language was used to create the application.\n",
     "\n",
@@ -443,20 +474,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<streamsx.topology.topology.Sink at 0x7f9dbcc69ef0>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "id": "b490b2cd-489a-4681-bcd8-51b9efeeedc9"
+   },
+   "outputs": [],
    "source": [
     "import json\n",
     "# publish results as JSON\n",
@@ -471,7 +493,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "aadd5149-4187-4b57-9274-26b417663fd9"
+   },
    "source": [
     "<a name=\"launch\"></a>\n",
     "\n",
@@ -481,48 +505,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Submitting Topology to Streams for execution..\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7ed3b286def4575be43f672776ab3d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "IntProgress(value=0, bar_style='info', description='Initializing', max=10, style=ProgressStyle(description_wid…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Insecure host connections enabled.\n",
-      "Insecure host connections enabled.\n",
-      "Insecure host connections enabled.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JobId:  7 \n",
-      "Job name:  natasha::SensorAverages_7\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "id": "11a28eca-c6e8-4664-9364-7d952773de0d"
+   },
+   "outputs": [],
    "source": [
     "# The submission_result object contains information about the running application, or job\n",
     "print(\"Submitting Topology to Streams for execution..\")\n",
@@ -537,7 +524,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "40114c18-e3b5-41a6-a433-f484ea411359"
+   },
    "source": [
     "<a name=\"view\"></a>\n",
     "\n",
@@ -548,27 +537,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching view data ...\n",
-      "{'average': 1638.4208295058636, 'sensor_id': 'sensor_1', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.6074, -74.0288]}\n",
-      "{'average': 1585.5711353620761, 'sensor_id': 'sensor_10', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.5221, -74.1202]}\n",
-      "{'average': 1695.0489727665845, 'sensor_id': 'sensor_100', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.4907, -74.6753]}\n",
-      "{'average': 1467.3317589921596, 'sensor_id': 'sensor_11', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.5653, -74.6608]}\n",
-      "{'average': 1311.4337845103387, 'sensor_id': 'sensor_12', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.1358, -74.3805]}\n",
-      "{'average': 2111.056978894137, 'sensor_id': 'sensor_13', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.7504, -74.6318]}\n",
-      "{'average': 1877.9104272407574, 'sensor_id': 'sensor_14', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.6737, -74.7344]}\n",
-      "{'average': 1281.5907322347166, 'sensor_id': 'sensor_15', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.5332, -73.8829]}\n",
-      "{'average': 1322.9129925569678, 'sensor_id': 'sensor_16', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.0474, -74.8014]}\n",
-      "{'average': 1626.8447123401008, 'sensor_id': 'sensor_17', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.2979, -74.7501]}\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "id": "0874228c-f300-4b9c-a349-1e77ffa03b56"
+   },
+   "outputs": [],
    "source": [
     "print(\"Fetching view data ...\")\n",
     "# Connect to the view and display the data\n",
@@ -582,7 +555,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "c73a43bc-8fd3-4e70-b42d-5b833eda65a1"
+   },
    "source": [
     "## 4.1 Display the results in real time\n",
     "Calling `View.display()` from the notebook displays the results of the view in a table that is updated in real-time."
@@ -591,7 +566,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "ecea5a5e-7fee-45d9-b96e-b6c54cf46cbe"
+   },
    "outputs": [],
    "source": [
     "# Display the results for 30 seconds\n",
@@ -600,7 +577,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "2dee4f97-cb67-4ba5-bd81-2c4130a622a1"
+   },
    "source": [
     "\n",
     "## 4.2 See job status \n",
@@ -621,7 +600,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0ed0df52-4ac8-416a-898f-acdff46be92e"
+   },
    "source": [
     "<a name=\"cancel\"></a>\n",
     "\n",
@@ -631,31 +612,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "fd8efc7e-61cc-45b1-9f14-3b1282c60b45"
+   },
    "source": [
     "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb6ae02c2a464b68b9f735586b7f91a6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Button(button_style='danger', description='Cancel job: natasha::SensorAverages_7', layout=Layou…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "id": "2a30738a-5478-4d94-bfab-8c9d6e89c681"
+   },
+   "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
     "submission_result.cancel_job_button()\n",
@@ -665,7 +635,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "eae6a864-2c3e-469b-8f63-886c39ac34ac"
+   },
    "source": [
     "# Summary\n",
     "\n",
