comment the options for connecting, #66

--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -7,7 +7,9 @@
     }
    },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "d74961ce-6914-44de-946d-662ec9ab9784"
+   },
    "source": [
     "# IBM Streams database sample application\n",
     "This sample demonstrates creating a Streams Python application to connect to a Db2 database, performing some analytics, and viewing the results.\n",
@@ -50,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "b55ec870-9e9d-4579-ae25-1d5955696c60"
+   },
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
@@ -64,7 +68,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "6f3c8221-c3d7-4fcb-908d-53d5e959a3fd"
+   },
    "source": [
     "### 1.2 Import  the `streamsx.database` package and verify the package version"
    ]
@@ -72,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "983ce8ce-9757-49bf-8331-dcbcef50efdd"
+   },
    "outputs": [],
    "source": [
     "import streamsx.database as db\n",
@@ -83,18 +91,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "a9d9ad12-dfc4-49ec-887d-ecbc1bc6561f"
+   },
    "source": [
     "### <a name=\"credentials\"> </a> 1.3 Configure the connection to Db2 Warehouse\n",
     "\n",
-    "We need Db2 credentials to connect to a Db2 database."
+    "We need Db2 credentials to connect to a Db2 database.\n",
+    "\n",
+    "Select one of the following options:\n",
+    "* OPTION 1: Use external connection configured in Cloud Pak for Data\n",
+    "* OPTION 2: Use credentials from IBM cloud Db2 Warehouse service\n",
+    "* OPTION 3: Custom connetion, for example when running this notebook outside Cloud Pak for Data or having a database not located in IBM cloud or Cloud Pak for Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "b9244c21-8337-4e9b-a1a4-dc6bc4c2b893"
+   },
    "source": [
-    "### 1.3.1 Use a configured external connection\n",
+    "### 1.3.1 OPTION 1: Use a configured external connection\n",
     "\n",
     "Perform the steps [Connecting to data source](https://www.ibm.com/support/producthub/icpdata/docs/content/SSQNUZ_current/cpd/access/connect-data-sources.html) \n",
     "and create an external configuration for your Db2 connection.\n",
@@ -105,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "f5ca6d75-a227-4491-8401-96d6c35464ee"
+   },
    "outputs": [],
    "source": [
     "ext_connections = icpd_util.get_connections('external')\n",
@@ -114,7 +133,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "679a1839-0488-4031-a6b8-7a942cacd093"
+   },
    "source": [
     "Change the `connection_name` and run the cell below "
    ]
@@ -122,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "b743012f-08b2-4d90-9c98-847ac5d21f52"
+   },
    "outputs": [],
    "source": [
     "connection_name = 'auto-dashdb'\n",
@@ -132,9 +155,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "65e35698-872c-4b43-a653-9b076aafcc49"
+   },
    "source": [
-    "### 1.3.2 Use credentials from IBM cloud Db2 Warehouse service\n",
+    "### 1.3.2 OPTION 2: Use credentials from IBM cloud Db2 Warehouse service\n",
     "\n",
     "1. Create a Db2 Warehouse service on IBM cloud.\n",
     "\n",
@@ -151,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "e325f886-b855-498d-953d-c2ee218b4a6f"
+   },
    "outputs": [],
    "source": [
     "#import getpass\n",
@@ -161,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "ea9835fb-3fc1-40d4-a783-95c3706ae68a"
+   },
    "outputs": [],
    "source": [
     "#import json\n",
@@ -170,9 +199,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "1315f9f6-b305-4184-8218-accd05cadfe6"
+   },
    "source": [
-    "### 1.3.3 Custom connection\n",
+    "### 1.3.3 OPTION 3: Custom connection\n",
     "\n",
     "If you want to use another Db2 database, you can create a dict with the following attributes:\n",
     "\n",
@@ -186,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "67952e5b-21a2-4bc3-968b-0614c4f63f3f"
+   },
    "outputs": [],
    "source": [
     "#db2credentials = {\n",
@@ -198,7 +231,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "47a6676e-b8a2-4882-a792-57e38e4e1bc2"
+   },
    "source": [
     "# <a name=\"create\"> </a> 2. Create the application\n",
     "All Streams applications start with a Topology object, so start by creating one:\n"
@@ -207,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "21595160-e0f6-4a49-b64e-4e2b34eaaf1f"
+   },
    "outputs": [],
    "source": [
     "#Imports\n",
@@ -222,7 +259,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "b37ad95f-c6ec-4abf-8e66-7e78b382b3ef"
+   },
    "source": [
     "\n",
     "### How to use the streamsx.database package\n",
@@ -248,7 +287,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "4fb35674-7f3f-4aff-9302-1ed12b704792"
+   },
    "source": [
     "### Define the SQL statements and table name"
    ]
@@ -256,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "93dee302-0fda-4189-a6cf-8b8fc6a3b136"
+   },
    "outputs": [],
    "source": [
     "table_name = 'RUN_SAMPLE_DEMO'\n",
@@ -270,7 +313,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "ef4d1b0d-943e-4dcc-851b-6dbaba5f3f43"
+   },
    "source": [
     "## <a name=\"drop\"> </a> 2.1. Create the table\n",
     "\n",
@@ -283,7 +328,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "a1ccc790-f52d-425d-b47e-d0e0d7bc1f64"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology.schema import CommonSchema, StreamSchema\n",
@@ -295,7 +342,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "f2b3c6e5-c9c4-44cc-a8c5-858d10288f33"
+   },
    "source": [
     "## <a name=\"insert\"> </a> 2.2. Insert streaming data into the table\n",
     "\n",
@@ -314,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "d73d4222-894a-4965-9e1e-4280de1e0649"
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -345,7 +396,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "0d772cba-ad59-48de-8323-1840c299edae"
+   },
    "source": [
     "## <a name=\"select\"> </a> 2.3. Retrieve data from the table\n",
     "In this step the `JDBCStatement` runs the SQL statement `\"SELECT * FROM RUN_SAMPLE_DEMO\"` and returns the results in tuple schema `tuple<int64 ID, rstring NAME, int32 AGE>` .\n"
@@ -354,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "41f48af6-da82-4c69-9ad5-3a77347eacb3"
+   },
    "outputs": [],
    "source": [
     "# select all rows from table\n",
@@ -370,7 +425,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "73958967-f2c9-4945-8c1a-45075a7b6a06"
+   },
    "source": [
     "# <a name=\"submit\"> </a> 3. Submit the application\n",
     "\n",
@@ -380,7 +437,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "4dda74c8-14db-4fab-bfad-1990a2f1ae42"
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
@@ -398,7 +457,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "3aac3114-1a60-437c-a95e-4dfc76e209e8"
+   },
    "source": [
     "# <a name=\"view\"> </a> 4. Use the View to access data from the job\n",
     "\n",
@@ -408,7 +469,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "f8537cc9-5320-45d4-80b7-499e75d8af30"
+   },
    "outputs": [],
    "source": [
     "# Connect to the view and display the selected data\n",
@@ -422,7 +485,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "1e7e13bc-30d4-41f9-a7c5-227cdab7376b"
+   },
    "source": [
     "# <a name=\"status\"> </a> 5. See job status\n",
     "\n",
@@ -434,7 +499,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "aed179b6-a102-469e-a66b-b8d5b0ed5f03"
+   },
    "source": [
     "# <a name=\"cancel\"></a> 6. Cancel the job\n",
     "\n",
@@ -444,7 +511,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "bbd7897b-93fa-4287-83b4-c82bdc3d504c"
+   },
    "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
@@ -453,7 +522,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "a626863d-0b9b-4d3c-a8b9-5a06276627c6"
+   },
    "source": [
     "## Summary\n",
     "\n",
