wml version changed to 3.5, some typos fixed

--- a/Streams-CPD-WMLScoringSample.ipynb
+++ b/Streams-CPD-WMLScoringSample.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,7 +25,7 @@
     "A further section creates a Streaming Analytics application which is using the deployment to score online streaming data.\n",
     "\n",
     "\n",
-    "Some familiarity with python is helpful. This notebook uses Python 3.\n",
+    "Some familiarity with python is helpful. This notebook uses **Python 3.6**.\n",
     "\n",
     "You will use the **Iris** data set to predict the species of an iris flower. This data set contains measurements of the iris perianth flower. \n",
     "\n",
@@ -70,7 +69,7 @@
    "source": [
     "In this section you will learn which information is necessary to connect to WML in CPD and which steps are needed to use the WML API client.\n",
     "\n",
-    "You will create and use some WML artifacts (space, model, deployment) which need to have own name. The notebbok defines these names in next cells, they will be used in the code of the notebook later. If you want to use your own name you can change them there."
+    "You will create and use some WML artifacts (space, model, deployment) which need to have own name. The notebook defines these names in next cells, they will be used in the code of the notebook later. If you want to use your own name you can change them there."
    ]
   },
   {
@@ -93,7 +92,7 @@
     "Running in a Jupyter notebook in CPD you can use the token from the Jupyter environment. This token identifies you in CPD.\n",
     "Below you find the WML credential informations needed to connect to WML in CPD.\n",
     "The WML service URL is addressed by the CPD internal URL (same for all CPD instances), so you don't take care for this.\n",
-    "The instance id is a fix value and the version also. Even though this notebook is for CPD 3.0.0 it is using version string \"2.5.0\" for client creation as its using no version \"3.0.0\" functions."
+    "The instance id is a fix value and the version also."
    ]
   },
   {
@@ -110,7 +109,7 @@
     "                   \"url\": \"https://internal-nginx-svc:12443\", # access the main CP4D proxy/the CP4D cluster root from internal side\n",
     "                   \"token\": userToken,\n",
     "                   \"instance_id\": \"wml_local\",\n",
-    "                   \"version\" : \"2.5.0\"\n",
+    "                   \"version\" : \"3.5\"\n",
     "                  }"
    ]
   },
@@ -135,10 +134,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from watson_machine_learning_client import WatsonMachineLearningAPIClient\n",
-    "\n",
-    "wml_client = WatsonMachineLearningAPIClient(wml_credentials)\n",
-    "\n",
+    "from ibm_watson_machine_learning import APIClient\n",
+    "wml_client = APIClient(wml_credentials)\n",
+    "wml_client.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "spaces = wml_client.spaces.get_details()['resources']\n",
     "space_guid = None\n",
     "for space in spaces:\n",
@@ -435,7 +441,7 @@
     "# streamsx.wml functions support field mapping as JSON \n",
     "field_mapping = json.dumps(field_mapping_dict)\n",
     "# streamsx.wml functions support WML credentials as JSON \n",
-    "wml_credentials = json.dumps(wml_utils.get_wml_credentials(version = '2.5.0'))  #token,url,instance_id,version\n",
+    "wml_credentials = json.dumps(wml_utils.get_wml_credentials(version = '3.5'))  #token,url,instance_id,version\n",
     "\n",
     "######################################################\n",
     "# Callable class used by the REST handler threads.\n",
@@ -674,7 +680,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"streams\" ## Change this to your Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to your Streams instance\n",
     "\n",
     "try:\n",
     "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
@@ -860,7 +866,7 @@
     "<ul>\n",
     "    <li><b>Data preparation</b><br>Make sure your input stream meets your deployments (models) expected input features\n",
     "    </li>\n",
-    "    <li><b>Score using <code>streamsx.wml.wml_online_scoreing()</code>, specifying: </b><br>\n",
+    "    <li><b>Score using <code>streamsx.wml.wml_online_scoring()</code>, specifying: </b><br>\n",
     "        - the input stream which should be processed <b>mandatory</b><br>\n",
     "        - the deployment_guid of the deployment we want to use <b>mandatory</b><br>\n",
     "        - the field_mapping from input stream fields to model input features <b>mandatory</b><br>\n",
@@ -885,6 +891,8 @@
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
+    "import streamsx.wml.utils as wml_utils\n",
+    "import json\n",
     "\n",
     "#####################################################################################\n",
     "# Define the parameter for the scoring function\n",
@@ -902,7 +910,7 @@
     "field_mapping = json.dumps(field_mapping_dict)\n",
     "\n",
     "# streamsx.wml.wml_online_scoring() functions support WML credentials as JSON or dict\n",
-    "wml_credentials = json.dumps(wml_utils.get_wml_credentials(version = '2.5.0'))  #token,url,instance_id,version\n",
+    "wml_credentials = json.dumps(wml_utils.get_wml_credentials(version = '3.5'))  #token,url,instance_id,version\n",
     "\n",
     "# function call parameter\n",
     "params= {\n",
