updated for CPD3.5

--- a/Streams-CPD-WMLScoringSample.ipynb
+++ b/Streams-CPD-WMLScoringSample.ipynb
@@ -108,7 +108,7 @@
     "wml_credentials = {\n",
     "                   \"url\": \"https://internal-nginx-svc:12443\", # access the main CP4D proxy/the CP4D cluster root from internal side\n",
     "                   \"token\": userToken,\n",
-    "                   \"instance_id\": \"wml_local\",\n",
+    "                   \"instance_id\": \"openshift\",\n",
     "                   \"version\" : \"3.5\"\n",
     "                  }"
    ]
@@ -140,20 +140,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.0.1 Create new space**\n",
+    "\n",
+    "If you have a space already, please skip the cell below and continue with **1.0.2** "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spaces = wml_client.spaces.get_details()['resources']\n",
-    "space_guid = None\n",
-    "for space in spaces:\n",
-    "    if space['entity']['name'] == SPACE_NAME:\n",
-    "        space_guid = space[\"metadata\"][\"guid\"]\n",
-    "if space_guid is None:\n",
-    "    space_guid = wml_client.spaces.store(meta_props={wml_client.spaces.ConfigurationMetaNames.NAME: SPACE_NAME})[\"metadata\"][\"guid\"]\n",
+    "space_metadata = {\n",
+    "    'name': SPACE_NAME,\n",
+    "    'description': DEPLOYMENT_NAME,\n",
+    "}\n",
+    "space_details = wml_client.spaces.store(space_metadata)\n",
+    "print(space_details)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "space_id = wml_client.spaces.get_id(space_details)\n",
+    "print(space_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to check if the space creation is completed succesfully change next cell format to code and execute it. It should return 'active'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wml_client.spaces.get_details(space_id)['entity']['status']['state']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.0.2 Use existing space**\n",
     "\n",
-    "wml_client.set.default_space(space_guid)"
+    "If you didn't create new space in this notebook by ibm_watson_machine_learning, please assign space ID below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wml_client.spaces.list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#space_id = 'PASTE YOUR SPACE ID HERE'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Set default space:** To be able to interact with all resources available in Watson Machine Learning, you need to set space which you will be using"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wml_client.set.default_space(space_id)"
    ]
   },
   {
@@ -239,8 +314,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download sample PMML model, iris_chaid.xml, from Git.\n",
-    "import wget, os\n",
+    "import os\n",
+    "from wget import download\n",
     "\n",
     "sample_dir = 'pmml_sample_model'\n",
     "if not os.path.isdir(sample_dir):\n",
@@ -248,17 +323,31 @@
     "    \n",
     "filename=os.path.join(sample_dir, 'iris_chaid.xml')\n",
     "if not os.path.isfile(filename):\n",
-    "    filename = wget.download('https://github.com/pmservice/wml-sample-models/raw/master/pmml/iris-species/model/iris_chaid.xml', out=sample_dir)\n",
-    "    \n",
-    "# Save the downloaded file to the WML repository.\n",
-    "props_pmml = {wml_client.repository.ModelMetaNames.NAME: MODEL_NAME,\n",
-    "              \"runtime\": \"pmml_4.2\", \n",
-    "              \"type\": \"pmml_4.2\"}\n",
+    "    filename = download('https://raw.githubusercontent.com/IBM/watson-machine-learning-samples/master/cpd/models/pmml/iris-species/model/iris_chaid.xml', out=sample_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sw_spec_uid = wml_client.software_specifications.get_uid_by_name(\"spark-mllib_2.4\")\n",
     "\n",
-    "model_details = wml_client.repository.store_model(filename, props_pmml)\n",
+    "meta_props = {\n",
+    "    wml_client.repository.ModelMetaNames.NAME: \"pmmlmodel\",\n",
+    "    wml_client.repository.ModelMetaNames.SOFTWARE_SPEC_UID: sw_spec_uid,\n",
+    "    wml_client.repository.ModelMetaNames.TYPE: 'pmml_4.2.1'}\n",
     "\n",
-    "model_guid = wml_client.repository.get_model_uid(model_details)\n",
-    "\n",
+    "published_model = wml_client.repository.store_model(model=filename, meta_props=meta_props)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wml_client.repository.list_models()"
    ]
   },
@@ -294,10 +383,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_deployment = wml_client.deployments.create(model_guid,  meta_props={'name':DEPLOYMENT_NAME,'online':{}})\n",
-    "deployment_guid = model_deployment[\"metadata\"][\"guid\"]\n",
+    "model_uid = wml_client.repository.get_model_uid(published_model)\n",
+    "deployment = wml_client.deployments.create(\n",
+    "    artifact_uid=model_uid,\n",
+    "    meta_props={\n",
+    "        wml_client.deployments.ConfigurationMetaNames.NAME: DEPLOYMENT_NAME,\n",
+    "        wml_client.deployments.ConfigurationMetaNames.ONLINE:{}}\n",
+    ")\n",
     "\n",
-    "wml_client.deployments.list()"
+    "wml_client.deployments.list()\n",
+    "deployment_id = wml_client.deployments.get_id(deployment)"
    ]
   },
   {
@@ -333,7 +428,7 @@
     "# Score data and predict species of flower.\n",
     "scoring_data = [{'fields': ['Sepal.Length', 'Sepal.Width', 'Petal.Length', 'Petal.Width'], 'values': [[5.1, 3.5, 1.4, 0.2]]}]\n",
     "\n",
-    "predictions = wml_client.deployments.score(deployment_guid,meta_props={'input_data':scoring_data})\n",
+    "predictions = wml_client.deployments.score(deployment_id, meta_props={'input_data':scoring_data})\n",
     "\n",
     "print(predictions)"
    ]
@@ -569,9 +664,9 @@
     "# WmlBundleController\n",
     "####################################################            \n",
     "params= {\n",
-    "    'deployment_guid':deployment_guid,\n",
+    "    'deployment_guid':deployment_id,\n",
     "    'wml_credentials':wml_credentials,\n",
-    "    'space_guid':space_guid,\n",
+    "    'space_guid':space_id,\n",
     "    'bundle_size':  1000,\n",
     "    'queue_size': 10000, \n",
     "    'threads_per_node': 2,\n",
@@ -914,10 +1009,10 @@
     "\n",
     "# function call parameter\n",
     "params= {\n",
-    "    'deployment_guid':deployment_guid, #the one from the cells run above\n",
+    "    'deployment_guid':deployment_id, #the one from the cells run above\n",
     "    'field_mapping':field_mapping, \n",
     "    'credentials':wml_credentials,\n",
-    "    'space_guid':space_guid,           #the one from the cells run above\n",
+    "    'space_guid':space_id,           #the one from the cells run above\n",
     "    'bundle_size':  1000,\n",
     "    'queue_size': 10000, \n",
     "    'threads_per_node': 2,\n",
@@ -1006,6 +1101,23 @@
    "source": [
     "# cancel the job in the IBM Streams service\n",
     "submission_result.cancel_job_button()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.6 Delete existing space\n",
+    "You can use the command below to delete existing space. You need to provide space_id of the space you want to delete."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wml_client.spaces.delete(space_id)"
    ]
   },
   {
